--- a/www/templates/mc-main.html
+++ b/www/templates/mc-main.html
@@ -1,18 +1,33 @@
 <ion-view view-title="의료 상담">
   <ion-content>
-    <ion-list>
-      <ion-item href="">
-      건강 상담
-      </ion-item>
-      <ion-item href="#/app/main/mc-main/mc-m-health">
-      심리 상담
-  		</ion-item>
-      <ion-item href="#/app/playlists/{{playlist.id}}">
-		진료 방안      
-		</ion-item>
-	  <ion-item href="#/app/playlists/{{playlist.id}}">
-      상조 우대
-      </ion-item>
-    </ion-list>
+  <div class="col">
+  
+  <div class="row">
+    <div class="card col">
+      <a href="#/app/main/mc-main/mc-m-health">
+        <div class="item item-text-wrap main-card" >        
+                건강 상담
+        </div>
+      </a>
+    </div>
+    <div class="card col">
+        <div class="item item-text-wrap main-card">
+        심리 상담
+        </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="card col">
+      <div class="item item-text-wrap main-card">
+      진료 방안  
+      </div>
+    </div>
+    <div class="card col">
+      <div class="item item-text-wrap main-card">
+        상조 우대
+      </div>
+    </div>
+  </div>
+  </div>
   </ion-content>
 </ion-view>
