--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Main">
+<ion-view title="Main">
   <ion-content>
   <div class="col">
   
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="card col">
-      <a href="#/app/main/mc-main">
+      <a href="#/main/mc-main">
         <div class="item item-text-wrap main-card">
         의료상담 
         (헬스케어)
