--- a/www/templates/mc-m-health.html
+++ b/www/templates/mc-m-health.html
@@ -1,12 +1,11 @@
 <ion-view view-title="의료 상담">
   <ion-content>
-    <ion-list>
-      <ion-item href="">
-      음성 저장 (왓슨)      
-      </ion-item>
-      <ion-item href="#/app/main/mc-main">
-      텍스트 입력
-  		</ion-item>
-    </ion-list>
+    <a class="button button-block button-positive" href="#/main/cyber-counseling">
+      Cyber counseling 
+    </a>
+
+    <a class="button button-block button-positive" href="">
+      Health care call center <i class=" icon ion-ios-telephone"></i>
+    </a>
   </ion-content>
 </ion-view>
