--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -4,18 +4,16 @@
   
   <div class="row">
     <div class="card col">
-      <a href="#/main/mr-main">
+      <a href="#/main/mc-main">
         <div class="item item-text-wrap main-card" >        
-          검진센터 
-          검진예약
+          Health Consultation
         </div>
       </a>
     </div>
     <div class="card col">
-      <a href="#/main/mc-main">
+      <a href="#/main/reservation">
         <div class="item item-text-wrap main-card">
-        의료상담 
-        (헬스케어)
+        Medical Checkup Reservation
         </div>
       </a>
     </div>
@@ -23,12 +21,12 @@
   <div class="row">
     <div class="card col">
       <div class="item item-text-wrap main-card">
-      검진결과 보관
+      Result of health check up
       </div>
     </div>
     <div class="card col">
       <div class="item item-text-wrap main-card">
-        건강관리
+        Health care
       </div>
     </div>
   </div>
