--- a/www/templates/cyber-counseling.html
+++ b/www/templates/cyber-counseling.html
@@ -1,14 +1,15 @@
 <ion-view view-title="Cyber counseling">
   <ion-content>
-  <div class="list card">
+  Cyber Counseling page
+  <!-- <div class="list card"> -->
 
-  <div class="item">
+  <!-- <div class="item">
     <div class="row">
       <div class="col col-40">
         <img src="mcfly.jpg">
       </div>
       <div class="col col-60">
-        <h2>간편 예약 따라하기</h2>
+        <h2></h2>
         <p>November 05, 1955</p>
       </div>
     </div> 
@@ -26,12 +27,12 @@
       </ion-radio>
       </div>
     </div>
-    <a href="#/main/mr-main/mr-main-1/mr-main-2">
+    <a href="#/">
       <button class="button button-full button-positive">
           다음        
       </button>
     </a>
 
-  </div>
+  </div> -->
   </ion-content>
 </ion-view>
