--- a/www/templates/mc-m-health.html
+++ b/www/templates/mc-m-health.html
@@ -1,11 +1,25 @@
 <ion-view view-title="의료 상담">
+<ion-nav-bar class="bar-dark" align-title="center">
+  <ion-nav-buttons  side="left">
+      <a class="button" ng-click="clickButton()" href="#/main">
+         <i class="button-icon icon ion-home"></i>
+      </a>
+  </ion-nav-buttons>
+  <ion-nav-buttons  side="right">
+      <!--i class="button-icon icon ion-loading-a" ng-show="loader.loading"></i-->
+  </ion-nav-buttons>
+</ion-nav-bar>
+
   <ion-content>
-    <a class="button button-block button-positive" href="#/main/cyber-counseling">
+  <div class="col counsel-btns">
+    <a class="button button-block button-stable" href="#/main/cyber-counseling">
       Cyber counseling 
     </a>
 
-    <a class="button button-block button-positive" href="">
+    <a class="button button-block button-stable" href="">
       Health care call center <i class=" icon ion-ios-telephone"></i>
     </a>
+  </div>
+</div>
   </ion-content>
 </ion-view>
