--- a/www/templates/mr-main-2.html
+++ b/www/templates/mr-main-2.html
@@ -5,10 +5,10 @@
   <div class="item">
     <div class="row">
       <div class="col col-40">
-        <img src="mcfly.jpg">
+        <img id="simple-reserv-icon" src="img/simple-reserv-icon.png" >
       </div>
       <div class="col col-60">
-        <h2>간단 문진표
+        <h2>Simple Questions
         </h2>
         <p> </p>
       </div>
