--- a/www/templates/mr-main-3.html
+++ b/www/templates/mr-main-3.html
@@ -5,10 +5,10 @@
   <div class="item">
     <div class="row">
       <div class="col col-40">
-        <img src="mcfly.jpg">
+        <img id="simple-reserv-icon" src="img/simple-reserv-icon.png" >
       </div>
       <div class="col col-60">
-        <h2>내게 맞는 건강검진은?</h2>
+        <h2>Fit me?</h2>
         <p> </p>
       </div>
     </div> 
@@ -21,10 +21,8 @@
       </div>
     </div>
     
-    <a href="#/main/mr-main/mr-main-1/mr-main-2/mr-main-3/mr-main-4">
-      <button class="button button-full button-assertive">
+    <a href="#/main/mr-main/mr-main-1/mr-main-2/mr-main-3/mr-main-4" class="button button-full button-assertive">
           검진 프로그램 보기        
-      </button>
     </a>
 
   </div>
