--- a/www/templates/mr-main-4.html
+++ b/www/templates/mr-main-4.html
@@ -11,7 +11,7 @@
       기본플러스 종합검진
     </div>
   </div>
-  <div class="row">
+  <div class="row type-row">
     <div class="col">
       정밀종합검진
     </div>
@@ -52,6 +52,6 @@
     <ion-checkbox ng-repeat="test in tests" ng-model="filter.blue">{{test.value}}</ion-checkbox>
   </ion-list>
 
-    <a href="#/main/mr-main/mr-main-1/mr-main-2/mr-main-3/mr-main-4/mr-main-5"><button class="button button-full button-positive">예약하기</button></a>
+    <a href="#/main/confirm"><button class="button button-full button-positive">예약하기</button></a>
   </ion-content>
 </ion-view>
