--- a/www/templates/reservation.html
+++ b/www/templates/reservation.html
@@ -1,40 +1,48 @@
 
-<ion-view title="Choose reservation type">
-  <ion-nav-bar class="bar-stable" align-title="center">
-    <ion-nav-buttons  side="left">
-        <button class="button" ng-click="clickButton()">
-          <i class="button-icon icon ion-home" href="#/main"></i>
-        </button>
-    </ion-nav-buttons>
-    <ion-nav-buttons  side="right">
-      <a class="button button-small" href="#/sign-up">로그아웃</a>
-        <!-- <i class="button-icon icon ion-home"></i> -->
-        <!--i class="button-icon icon ion-loading-a" ng-show="loader.loading"></i-->
-    </ion-nav-buttons>
-  </ion-nav-bar>
+<ion-view title="Choose reservation">
+  <ion-nav-bar class="bar-dark" align-title="center">
+  <ion-nav-buttons  side="left">
+      <a class="button" ng-click="clickButton()" href="#/main">
+         <i class="button-icon icon ion-home"></i>
+      </a>
+  </ion-nav-buttons>
+  <ion-nav-buttons  side="right">
+      <!--i class="button-icon icon ion-loading-a" ng-show="loader.loading"></i-->
+  </ion-nav-buttons>
+</ion-nav-bar>
 
   <ion-content>
 
 
-<div class="row">
+<div class="row reserve-btns">
   <div class="col">
-    <div class=" row main-menu"> 
-     <!--  <a href="#/main/activity">
-        <div class="item item-text-wrap main-card btn-sched" >        
-          활동하기
-        </div>
-      </a> -->
       <a class="button button-full" id="btn-clinic-reserv" href="">Clinic Reservation</a>
-    </div>
   </div>
-  <div class="col main-menu">
-    <a class="button button-full" id="btn-chkup-reserv" href="#/tab/eval">Medical Checkup Reservation</a>
+  <div class="col">
+    <a class="button button-full" id="btn-chkup-reserv" href="#/main/mcheck-reserv">Medical Checkup Reservation</a>
  <!--    <a href="#/main/schedule">
         <div class="item item-text-wrap main-card btn-idea" >        
           Idea for Ideal
         </div>
       </a> -->
    </div>
+</div>
+
+<div class="col reserv-info">
+  <div class="row platinum-info">
+      <div class="col col-30">
+        <button class="button button-block button-stable">Platinum</button>
+      </div>
+      <div class="col">Description and Benefits
+      </div>
+    </div>
+  <div class="row normal-info">
+    <div class="col col-30">
+        <button class="button button-block button-stable">Normal</button>
+      </div>
+      <div class="col">Description and Benefits
+    </div>
+    </div>
 </div>
 
   
