--- a/www/templates/simple-reserv.html
+++ b/www/templates/simple-reserv.html
@@ -5,11 +5,10 @@
   <div class="item">
     <div class="row">
       <div class="col col-40">
-        <img src="mcfly.jpg">
+        <img id="simple-reserv-icon" src="img/simple-reserv-icon.png" >
       </div>
       <div class="col col-60">
-        <h2>간편 예약 따라하기</h2>
-        <p>November 05, 1955</p>
+        <h2>Simple Reservation</h2>
       </div>
     </div> 
   </div>
