--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,4 +1,4 @@
-<ion-view title="Main">
+<ion-view title="Green Melody">
 <ion-nav-bar class="bar-dark" align-title="center">
   <ion-nav-buttons  side="left">
       <button class="button" ng-click="clickButton()">
@@ -42,7 +42,7 @@
   </div>
   </div>
   <div class="row">
-  <div class="card col">
+  <div class="card col" id="allianz-card">
       <div class="item item-text-wrap text-center logo-text">
         Allianz
       </div>
