--- a/www/templates/mc-m-health.html
+++ b/www/templates/mc-m-health.html
@@ -1,4 +1,4 @@
-<ion-view view-title="의료 상담">
+<ion-view view-title="Green Melody">
 <ion-nav-bar class="bar-dark" align-title="center">
   <ion-nav-buttons  side="left">
       <a class="button" ng-click="clickButton()" href="#/main">
