--- a/www/templates/mcheck-reserve.html
+++ b/www/templates/mcheck-reserve.html
@@ -1,6 +1,6 @@
-<ion-view view-title="검진 예약">
+<ion-view view-title="Green Melody">
 
-  <ion-content>
+  <ion-content class="bgcolor-white">
     <ion-list>
       <div ng-repeat="group in groups">
         <ion-item class="item-stable"
