--- a/www/templates/mr-main-2.html
+++ b/www/templates/mr-main-2.html
@@ -1,5 +1,5 @@
-<ion-view view-title="간단 문진표">
-  <ion-content>
+<ion-view view-title="Green Melody">
+  <ion-content class="bgcolor-white">
   <div class="list card">
 
   <div class="item">
@@ -8,9 +8,12 @@
         <img id="simple-reserv-icon" src="img/simple-reserv-icon.png" >
       </div>
       <div class="col col-60">
-        <h2>Simple Questions
-        </h2>
-        <p> </p>
+        <div class="row check-title">
+          Simple
+        </div>
+        <div class="row check-title">
+          Questions
+        </div>    
       </div>
     </div> 
   </div>
