--- a/www/templates/mr-main-4.html
+++ b/www/templates/mr-main-4.html
@@ -1,5 +1,5 @@
-<ion-view view-title="기본플러스 종합검진">
-  <ion-content>
+<ion-view view-title="Green Melody">
+  <ion-content class="bgcolor-white">
   <div class="row type-row">
     <div class="col">
       경제형건강검진
