--- a/www/templates/mr-main.html
+++ b/www/templates/mr-main.html
@@ -1,4 +1,4 @@
-<ion-view view-title="검진 예약">
+<ion-view view-title="Green Melody">
   <ion-content>
     <ion-list>
       <div ng-repeat="group in groups">
