--- a/www/templates/reservation.html
+++ b/www/templates/reservation.html
@@ -1,5 +1,5 @@
 
-<ion-view title="Choose reservation">
+<ion-view title="Green Melody" >
   <ion-nav-bar class="bar-dark" align-title="center">
   <ion-nav-buttons  side="left">
       <a class="button" ng-click="clickButton()" href="#/main">
@@ -11,7 +11,7 @@
   </ion-nav-buttons>
 </ion-nav-bar>
 
-  <ion-content>
+  <ion-content class="bgcolor-white">
 
 
 <div class="row reserve-btns">
