--- a/www/templates/confirm.html
+++ b/www/templates/confirm.html
@@ -1,5 +1,5 @@
 <ion-view >
-  <ion-content>
+  <ion-content class="bgcolor-white">
   <div class="text-center card">
     <div class="item item-text-wrap">
       <h2 class="item-reserve-comp">Your reservation has been completed!</h2>
