--- a/www/templates/cyber-counseling.html
+++ b/www/templates/cyber-counseling.html
@@ -1,7 +1,22 @@
-<ion-view view-title="Cyber counseling">
-<ion-content class="content-stable"
+<ion-view view-title="Green Melody">
+  <ion-nav-bar class="bar-dark" align-title="center">
+  <ion-nav-buttons  side="left">
+      <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack()">
+         <i class="ion-arrow-left-c"></i> Back
+      </button>
+  </ion-nav-buttons>
+<!--   <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack()">
+          <i class="ion-arrow-left-c"></i> Back
+        </button> -->
+  <ion-nav-buttons  side="right">
+      <i class="button-icon icon ion-loading-a" ng-show="loader.loading"></i>
+      <button class="button button-clear"><icon class="icon ion-clipboard"></icon></button>
+  </ion-nav-buttons>
+</ion-nav-bar>
+
+<ion-content class="content-stable bgcolor-white"
                  on-swipe-left="hideTime = false"
-                 on-swipe-right="hideTime = true">
+                 on-swipe-right="hideTime = true" >
 
       <div ng-repeat="message in messages"
            ng-class="{other: message.userId != myId}"
