--- a/www/templates/mr-main-3.html
+++ b/www/templates/mr-main-3.html
@@ -1,5 +1,5 @@
-<ion-view view-title="예약">
-  <ion-content>
+<ion-view view-title="Green Melody">
+  <ion-content class="bgcolor-white">
   <div class="list card">
 
   <div class="item">
@@ -8,8 +8,9 @@
         <img id="simple-reserv-icon" src="img/simple-reserv-icon.png" >
       </div>
       <div class="col col-60">
-        <h2>Fit me?</h2>
-        <p> </p>
+        <div class="row check-title">
+          Fit me?
+        </div>
       </div>
     </div> 
   </div>
