--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -15,27 +15,27 @@
   <div class="col">
   
   <div class="row">
-    <div class="card col">
+    <div class="card col main-card">
       <!-- a href="#/main/mc-main" -->
-        <a href="#/main/mc-main/mc-m-health" class="item item-text-wrap main-card main-menu-card" >       
+        <a href="#/main/mc-main/mc-m-health" class="item item-text-wrap  main-menu-card" >       
           Health Consultation
         </a>
       <!-- </a> -->
     </div>
-    <div class="card col">
-        <a href="#/main/reservation" class="item item-text-wrap main-card main-menu-card">
+    <div class="card col main-card">
+        <a href="#/main/reservation" class="item item-text-wrap  main-menu-card">
         Medical Checkup Reservation
         </a>
     </div>
   </div>
   <div class="row">
-    <div class="card col">
-      <div class="item item-text-wrap main-card main-menu-card">
+    <div class="card col main-card">
+      <div class="item item-text-wrap main-menu-card">
       Result of health check up
       </div>
     </div>
-    <div class="card col">
-      <div class="item item-text-wrap main-card main-menu-card">
+    <div class="card col main-card">
+      <div class="item item-text-wrap  main-menu-card">
         Health care
       </div>
     </div>
