cyber counseling recommendation icon

--- a/www/templates/cyber-counseling.html
+++ b/www/templates/cyber-counseling.html
@@ -10,7 +10,7 @@
         </button> -->
   <ion-nav-buttons  side="right">
       <i class="button-icon icon ion-loading-a" ng-show="loader.loading"></i>
-      <button class="button button-clear"><icon class="icon ion-clipboard"></icon></button>
+      <button class="button button-clear"><icon class="icon ion-social-twitter"></icon></button>
   </ion-nav-buttons>
 </ion-nav-bar>
 
