Home icon button

--- a/www/templates/cyber-counseling.html
+++ b/www/templates/cyber-counseling.html
@@ -1,9 +1,12 @@
 <ion-view view-title="Green Melody">
   <ion-nav-bar class="bar-dark" align-title="center">
   <ion-nav-buttons  side="left">
-      <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack()">
+     <!--  <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack()">
          <i class="ion-arrow-left-c"></i> Back
-      </button>
+      </button> -->
+       <a class="button button-iconbuttons button-clear header-item" href="#/main">
+          <i class="button-icon icon ion-home" ></i>
+      </a>
   </ion-nav-buttons>
 <!--   <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack()">
           <i class="ion-arrow-left-c"></i> Back
